--- a/style/style.css
+++ b/style/style.css
@@ -13,30 +13,24 @@ body header .presentation {
   display: grid;
   grid-template-columns: 30% 70%;
   grid-template-rows: 10% 90%;
-  height: 580px;
+  height: -moz-fit-content;
+  height: fit-content;
   background-color: #282828;
 }
 @media screen and (max-width: 576px) {
   body header .presentation {
     display: flex;
     flex-direction: column;
-    height: auto;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
   body header .presentation {
-    grid-template-columns: 35% 65%;
-    height: 450px;
+    grid-template-columns: 37% 63%;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
   body header .presentation {
-    height: 470px;
-  }
-}
-@media screen and (min-width: 992px) and (max-width: 1024px) {
-  body header .presentation {
-    height: 500px;
+    grid-template-columns: 35% 65%;
   }
 }
 body header .presentation .logoMenu {
@@ -45,42 +39,28 @@ body header .presentation .logoMenu {
   justify-content: space-between;
   padding: 10px;
   padding-right: 40px;
+  position: relative;
+  height: 50px;
+  align-items: center;
 }
 @media screen and (max-width: 576px) {
   body header .presentation .logoMenu {
-    padding: 10px;
-    box-shadow: 6px 0px 25px black;
-    position: sticky;
-    top: 0;
-  }
-}
-@media screen and (min-width: 576px) and (max-width: 768px) {
-  body header .presentation .logoMenu {
-    grid-column: 1/3;
+    justify-content: flex-start;
+    gap: 40px;
     padding-top: 5px;
     padding-bottom: 5px;
     box-shadow: 6px 0px 25px black;
-    position: sticky;
     top: 0;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 576px) and (max-width: 1024px) {
   body header .presentation .logoMenu {
     grid-column: 1/3;
+    justify-content: flex-start;
+    gap: 40px;
     padding-top: 5px;
     padding-bottom: 5px;
     box-shadow: 6px 0px 25px black;
-    position: sticky;
-    top: 0;
-  }
-}
-@media screen and (min-width: 992px) and (max-width: 1024px) {
-  body header .presentation .logoMenu {
-    grid-column: 1/3;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    box-shadow: 6px 0px 25px black;
-    position: sticky;
     top: 0;
   }
 }
@@ -89,27 +69,47 @@ body header .presentation .logoMenu__logo {
   cursor: pointer;
 }
 body header .presentation .logoMenu__menu {
-  display: flex;
+  width: 35px;
+  height: 40px;
   flex-direction: column;
   background-color: #282828;
-  justify-content: center;
-  gap: 3.5px;
   padding: 0px;
-  padding-bottom: 1px;
   margin: 0px;
+  position: relative;
   cursor: pointer;
 }
-body header .presentation .logoMenu__menu p {
+body header .presentation .logoMenu__menu span {
   background-color: #FFFFFF;
-  width: 33px;
-  height: 1.5px;
-  font-size: 0.1em;
-  line-height: 0;
+  width: 100%;
+  height: 1.7px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.3s ease;
+}
+body header .presentation .logoMenu__menu span:nth-child(1) {
+  top: 28%;
+}
+body header .presentation .logoMenu__menu span:nth-child(3) {
+  top: 72%;
+}
+body header .presentation .logoMenu__menu.active span:nth-child(1) {
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+body header .presentation .logoMenu__menu.active span:nth-child(2) {
+  opacity: 0;
+}
+body header .presentation .logoMenu__menu.active span:nth-child(3) {
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 body header .presentation .slideContainer {
   width: 100%;
   grid-row: 1/3;
   grid-column: 2/3;
+  height: 560px;
   /* Fading animation */
 }
 @media screen and (max-width: 576px) {
@@ -120,16 +120,22 @@ body header .presentation .slideContainer {
 @media screen and (min-width: 576px) and (max-width: 768px) {
   body header .presentation .slideContainer {
     grid-row: 2/3;
+    height: 320px;
+    align-self: flex-end;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
   body header .presentation .slideContainer {
     grid-row: 2/3;
+    height: 360px;
+    align-self: flex-end;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
   body header .presentation .slideContainer {
     grid-row: 2/3;
+    height: 460px;
+    align-self: flex-end;
   }
 }
 body header .presentation .slideContainer .slider {
@@ -169,11 +175,20 @@ body header .presentation__spectrum {
 @media screen and (min-width: 576px) and (max-width: 768px) {
   body header .presentation__spectrum {
     margin: 15px;
+    justify-content: center;
+    gap: 20px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
   body header .presentation__spectrum {
     margin: 20px;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body header .presentation__spectrum {
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 }
 body header .presentation__spectrum h1 {
@@ -192,18 +207,20 @@ body header .presentation__spectrum h1 {
 @media screen and (min-width: 576px) and (max-width: 768px) {
   body header .presentation__spectrum h1 {
     font-size: 1.8em;
-    margin: 40px auto;
+    margin: 0 auto;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
   body header .presentation__spectrum h1 {
-    font-size: 2.4em;
-    margin: 40px 0;
+    align-self: flex-start;
+    font-size: 2.2em;
+    margin: 20px 0;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
   body header .presentation__spectrum h1 {
     font-size: 2.5em;
+    margin-bottom: 20px;
   }
 }
 body header .presentation__spectrum h2 {
@@ -216,11 +233,12 @@ body header .presentation__spectrum h2 {
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
   body header .presentation__spectrum h2 {
-    margin: auto;
+    margin: 0 auto;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
   body header .presentation__spectrum h2 {
+    align-self: flex-start;
     margin: 0;
   }
 }
@@ -229,7 +247,7 @@ body header .presentation__spectrum button {
   background-color: #282828;
   font-size: 0.8em;
   font-weight: 800;
-  padding: 18px 45px 18px 45px;
+  padding: 18px 45px;
   border: 1.5px solid #C39469;
   margin: 0px 0px 100px 0px;
   width: -moz-fit-content;
@@ -240,26 +258,158 @@ body header .presentation__spectrum button {
     margin: 20px 0;
     align-self: center;
     font-size: 0.8em;
-    padding: 14px 40px 14px 40px;
+    padding: 14px 40px;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
   body header .presentation__spectrum button {
-    margin: 30px auto;
+    margin: 0 auto;
     font-size: 0.7em;
-    padding: 14px 40px 14px 40px;
+    padding: 14px 30px;
     align-self: center;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
   body header .presentation__spectrum button {
+    align-self: flex-start;
+    font-size: 0.75em;
+    padding: 10px 20px;
     margin: 40px 0;
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
   body header .presentation__spectrum button {
-    margin: 40px 0px 20px 40px;
+    font-size: 0.75em;
+    margin: 0px 0px 100px 40px;
   }
+}
+body header .off-screen-menu {
+  background-color: white;
+  position: absolute;
+  top: -120px;
+  left: 30%;
+  padding: 35px 20px;
+  z-index: 10;
+  max-height: 120px;
+  transition: 0.3s ease;
+}
+@media screen and (max-width: 768px) {
+  body header .off-screen-menu {
+    top: 60px;
+    left: -50%;
+    width: 50%;
+    height: 100%;
+    max-height: 100%;
+    padding: 0;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body header .off-screen-menu {
+    top: 60px;
+    left: -30%;
+    width: 30%;
+    height: 100%;
+    max-height: 100%;
+    padding: 0;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body header .off-screen-menu {
+    top: 60px;
+    left: -27.5%;
+    width: 27.5%;
+    height: 100%;
+    max-height: 100%;
+    padding: 0;
+  }
+}
+body header .off-screen-menu.active {
+  top: 0;
+}
+@media screen and (max-width: 1024px) {
+  body header .off-screen-menu.active {
+    top: 60px;
+    left: 0;
+  }
+}
+body header .off-screen-menu > ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  font-size: 0.8em;
+  letter-spacing: 0em;
+  font-weight: 700;
+  gap: 40px;
+  align-items: center;
+}
+@media screen and (max-width: 1024px) {
+  body header .off-screen-menu > ul {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+    width: 100%;
+    height: 100%;
+    font-size: 0.9em;
+    font-weight: 400;
+    padding: 0;
+  }
+}
+body header .off-screen-menu .home-menu {
+  color: #C39469;
+}
+@media screen and (max-width: 1024px) {
+  body header .off-screen-menu .home-menu {
+    color: #FFFFFF;
+    background-color: #C39469;
+  }
+}
+body header .off-screen-menu li {
+  cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  body header .off-screen-menu li {
+    margin: 0;
+    max-width: 92.2%;
+    width: 100%;
+    padding: 10px;
+    margin-left: 1px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body header .off-screen-menu li {
+    margin: 0;
+    max-width: 90.8%;
+    width: 100%;
+    padding: 10px;
+    margin-left: 1px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body header .off-screen-menu li {
+    margin: 0;
+    max-width: 92.3%;
+    width: 100%;
+    padding: 10px;
+    margin-left: 1px;
+  }
+}
+body header .off-screen-menu li:hover {
+  color: #C39469;
+}
+@media screen and (max-width: 992px) {
+  body header .off-screen-menu li:hover {
+    color: #FFFFFF;
+    background-color: #C4956A;
+  }
+}
+body header .off-screen-menu span {
+  font-size: 1.4em;
+  font-weight: 600;
+}
+body header .off-screen-menu .fa-solid {
+  font-size: 1.4em;
+  opacity: 0.4;
+  margin-right: 10px;
 }
 body header .sliderNav {
   display: grid;
@@ -271,8 +421,19 @@ body header .sliderNav {
     flex-direction: column;
   }
 }
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body header .sliderNav {
+    grid-template-columns: 37% 62%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body header .sliderNav {
+    grid-template-columns: 35% 65%;
+  }
+}
 body header .sliderNav__arrow {
   background-color: #313131;
+  z-index: 1;
 }
 body header .sliderNav__arrow div {
   position: relative;
@@ -320,10 +481,10 @@ body header .sliderNav__arrow div {
   }
 }
 body header .sliderNav__arrow div .fa-solid {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.8);
   font-size: 1.5em;
   padding: 20px;
-  border: 1.7px solid rgba(255, 255, 255, 0.7);
+  border: 1.7px solid rgba(255, 255, 255, 0.5);
   border-radius: 50%;
   cursor: pointer;
 }
@@ -366,10 +527,16 @@ body header .sliderNav__works {
     gap: 0px;
   }
 }
-@media screen and (min-width: 576px) and (max-width: 1024px) {
+@media screen and (min-width: 576px) and (max-width: 992px) {
   body header .sliderNav__works {
     flex-direction: column-reverse;
+    justify-content: center;
     gap: 0px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body header .sliderNav__works {
+    gap: 5px;
   }
 }
 body header .sliderNav__works h2 {
@@ -377,33 +544,61 @@ body header .sliderNav__works h2 {
   font-size: 4em;
   font-weight: 800;
   margin: 0;
+  padding: 0;
+  letter-spacing: 0.1em;
 }
 @media screen and (max-width: 576px) {
   body header .sliderNav__works h2 {
-    font-size: 1.5em;
+    font-size: 1.4em;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 768px) {
   body header .sliderNav__works h2 {
-    font-size: 2em;
+    font-size: 1.6em;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
   body header .sliderNav__works h2 {
-    font-size: 2.2em;
+    font-size: 1.8em;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body header .sliderNav__works h2 {
+    font-size: 2em;
   }
 }
 body header .sliderNav__works .worksInfos {
   display: flex;
   gap: 35px;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 @media screen and (max-width: 576px) {
   body header .sliderNav__works .worksInfos {
-    gap: 10px;
+    gap: 20px;
     justify-content: space-around;
     flex-wrap: wrap;
     padding-top: 15px;
+    font-size: 1em;
+    margin-top: 0;
+    margin-bottom: 8px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body header .sliderNav__works .worksInfos {
+    justify-content: center;
+    font-size: 0.9em;
+    gap: 0;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body header .sliderNav__works .worksInfos {
+    gap: 20px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body header .sliderNav__works .worksInfos {
+    gap: 25px;
   }
 }
 body header .sliderNav__works .sliderAdress {
@@ -412,11 +607,9 @@ body header .sliderNav__works .sliderAdress {
   font-weight: 800;
   display: none;
 }
-@media screen and (max-width: 576px) {
+@media screen and (min-width: 576px) and (max-width: 768px) {
   body header .sliderNav__works .sliderAdress {
-    font-size: 0.9em;
-    margin-top: 0;
-    margin-bottom: 8px;
+    margin: 5px 20px 5px 0;
   }
 }
 body header .sliderNav__works .sliderPrice, body header .sliderNav__works .sliderStreet {
@@ -425,11 +618,9 @@ body header .sliderNav__works .sliderPrice, body header .sliderNav__works .slide
   font-weight: 800;
   display: none;
 }
-@media screen and (max-width: 576px) {
+@media screen and (min-width: 576px) and (max-width: 768px) {
   body header .sliderNav__works .sliderPrice, body header .sliderNav__works .sliderStreet {
-    font-size: 0.9em;
-    margin-top: 0;
-    margin-bottom: 8px;
+    margin: 5px 20px 5px 0;
   }
 }
 body main .expertise,
