--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,120 @@ body {
   height: 100%;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
+body header {
+  height: -moz-fit-content;
+  height: fit-content;
+  /*
+  .off-screen-menu {
+      background-color: white;
+      position: absolute;
+      top: -120px;
+      left: 30%;
+      padding: 35px 20px;
+      z-index: 10;
+      max-height: 120px;
+      transition: .3s ease;
+      @media screen and (max-width: 768px) {
+          top: 60px;
+          left: -50%;
+          width: 50%;
+          height: 100%;
+          max-height: 100%;
+          padding: 0;
+      }
+      @media screen and (min-width: 768px) and (max-width: 992px) {
+          top: 60px;
+          left: -30%;
+          width: 30%;
+          height: 100%;
+          max-height: 100%;
+          padding: 0;
+      }
+      @media screen and (min-width: 992px) and (max-width: 1024px) {
+          top: 60px;
+          left: -27.5%;
+          width: 27.5%;
+          height: 100%;
+          max-height: 100%;
+          padding: 0;
+      }
+  }
+  .off-screen-menu.active {
+      top: 0;
+      @media screen and (max-width: 1024px) {
+          top: 60px;
+          left: 0;
+      }
+  }
+  .off-screen-menu > ul {
+      display: flex;
+      flex-direction: row;
+      list-style-type: none;
+      font-size: .8em;
+      letter-spacing: 0em;
+      font-weight: 700;
+      gap: 40px;
+      align-items: center;
+      @media screen and (max-width: 1024px) {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 5px;
+          width: 100%;
+          height: 100%;
+          font-size: .9em;
+          font-weight: 400;
+          padding: 0;
+      }
+  }
+  .off-screen-menu .home-menu {
+      color: #C39469;
+      @media screen and (max-width: 1024px) {
+          color: #FFFFFF;
+          background-color: #C39469;
+      }
+  }
+  .off-screen-menu li {
+      cursor: pointer;
+      @media screen and (max-width: 768px) {
+          margin: 0;
+          max-width: 92.2%;
+          width: 100%;
+          padding: 10px;
+          margin-left: 1px;
+      }
+      @media screen and (min-width: 768px) and (max-width: 992px) {
+          margin: 0;
+          max-width: 90.8%;
+          width: 100%;
+          padding: 10px;
+          margin-left: 1px;
+      }
+      @media screen and (min-width: 992px) and (max-width: 1024px) {
+          margin: 0;
+          max-width: 92.3%;
+          width: 100%;
+          padding: 10px;
+          margin-left: 1px;
+      }
+  }
+  .off-screen-menu li:hover {
+      color: #C39469;
+      @media screen and (max-width: 992px) {
+          color: #FFFFFF;
+          background-color: #C4956A;
+      }
+  }
+  .off-screen-menu span {
+      font-size: 1.4em;
+      font-weight: 600;
+  }
+  .off-screen-menu .fa-solid {
+      font-size: 1.4em;
+      opacity: .4;
+      margin-right: 10px;
+  }
+  */
+}
 body header .presentation {
   display: grid;
   grid-template-columns: 30% 70%;
@@ -61,6 +175,7 @@ body header .presentation .logoMenu {
     padding-top: 5px;
     padding-bottom: 5px;
     box-shadow: 6px 0px 25px black;
+    position: sticky;
     top: 0;
   }
 }
@@ -284,6 +399,14 @@ body header .presentation__spectrum button {
   }
 }
 body header .off-screen-menu {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  font-size: 0.8em;
+  letter-spacing: 0em;
+  font-weight: 700;
+  gap: 40px;
+  align-items: center;
   background-color: white;
   position: absolute;
   top: -120px;
@@ -323,27 +446,8 @@ body header .off-screen-menu {
     padding: 0;
   }
 }
-body header .off-screen-menu.active {
-  top: 0;
-}
 @media screen and (max-width: 1024px) {
-  body header .off-screen-menu.active {
-    top: 60px;
-    left: 0;
-  }
-}
-body header .off-screen-menu > ul {
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
-  font-size: 0.8em;
-  letter-spacing: 0em;
-  font-weight: 700;
-  gap: 40px;
-  align-items: center;
-}
-@media screen and (max-width: 1024px) {
-  body header .off-screen-menu > ul {
+  body header .off-screen-menu {
     flex-direction: column;
     align-items: flex-start;
     gap: 5px;
@@ -352,6 +456,15 @@ body header .off-screen-menu > ul {
     font-size: 0.9em;
     font-weight: 400;
     padding: 0;
+  }
+}
+body header .off-screen-menu.active {
+  top: 0;
+}
+@media screen and (max-width: 1024px) {
+  body header .off-screen-menu.active {
+    top: 60px;
+    left: 0;
   }
 }
 body header .off-screen-menu .home-menu {
@@ -363,11 +476,13 @@ body header .off-screen-menu .home-menu {
     background-color: #C39469;
   }
 }
-body header .off-screen-menu li {
+body header .off-screen-menu a {
+  text-decoration: none;
+  color: #000000;
   cursor: pointer;
 }
 @media screen and (max-width: 768px) {
-  body header .off-screen-menu li {
+  body header .off-screen-menu a {
     margin: 0;
     max-width: 92.2%;
     width: 100%;
@@ -376,7 +491,7 @@ body header .off-screen-menu li {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  body header .off-screen-menu li {
+  body header .off-screen-menu a {
     margin: 0;
     max-width: 90.8%;
     width: 100%;
@@ -385,7 +500,7 @@ body header .off-screen-menu li {
   }
 }
 @media screen and (min-width: 992px) and (max-width: 1024px) {
-  body header .off-screen-menu li {
+  body header .off-screen-menu a {
     margin: 0;
     max-width: 92.3%;
     width: 100%;
@@ -393,11 +508,11 @@ body header .off-screen-menu li {
     margin-left: 1px;
   }
 }
-body header .off-screen-menu li:hover {
+body header .off-screen-menu a:hover {
   color: #C39469;
 }
 @media screen and (max-width: 992px) {
-  body header .off-screen-menu li:hover {
+  body header .off-screen-menu a:hover {
     color: #FFFFFF;
     background-color: #C4956A;
   }
